@startuml

note as N1
  Todas as classes representadas,
   exceto a classe
  Migration, herdam da classe 
  <b>Auditoria</b>, porém,
  para não poluir o diagrama
   optou-se por não representá-la.
end note

class Area {
- descricao: String
}

class AreaAvaliador {
- area: Area
- usuario: Usuario
}

class AreaTrabalho {
- area: Area
- trabalho: Trabalho
}

class AutorTrabalho {
- usuario: Usuario
- trabalho: Trabalho
}

class Auditoria {
- usuarioCadastro: String
- dataCadastro: Date
- usuarioUltimaAlteracao: String
- dataUltimaAlteracao: Date
- status: char
}

class Categoria {
- descricao: String
}

class Email {
- remetente: String
- destinatario: String
- titulo: String
- mensagem: String
}

class EmailTemplate {
- titulo: String
- mensagem: String
}

class Evento {
- nome: String
- dataInicio: Date
- dataFim: Date
}

class EventoEmailTemplate {
- evento: Evento
- emailTemplate: EmailTemplate
}

class Migration {
- nomeArquivo: String
- dataExecucao: Date
}

class Permissao {
- descricao: String
}

class PermissaoUsuario {
- evento: Evento
- permissao: Permissao
- usuario: Usuario
}

class ResultadoSubmissao {
- resultado: int
- confianca: int
- comentarioAutor: String
- comentarioOrganizador: String
}

class Trabalho {
- titulo: String
- categoria: Categoria
- evento: Evento
- resultado: String
- pdf: byte[]
}

class TrabalhoAvaliador {
- usuario: Usuario
- trabalho: Trabalho
- resultadoSubmissao: ResultadoSubmissao
}

class Usuario {
- nome: String
- cpf: String
- email: String
- codigoRecuperacaoSenha: String
- senha: String
- dataEnvioCodigo: Date
}

Area "1" -left- "*" AreaAvaliador
Area "1" -- "*" AreaTrabalho
Usuario "1" -down- "*" AreaAvaliador
Usuario "1" -left- "*" AutorTrabalho
Usuario "1" -down- "*" TrabalhoAvaliador
Usuario "1" -up- "*" PermissaoUsuario
Trabalho "1" -down- "*" AutorTrabalho
Trabalho "1" -left- "*" AreaTrabalho
Trabalho "*" -- "1" Categoria
Trabalho "*" -- "1" Evento
Trabalho "1" -right- "*" TrabalhoAvaliador
Permissao "1" -up- "*" PermissaoUsuario
Evento "1" -- "*" PermissaoUsuario
Evento "1" -- "*" EventoEmailTemplate
EmailTemplate "1" -- "*" EventoEmailTemplate
ResultadoSubmissao "1" -left- "*" TrabalhoAvaliador

@enduml